# catphilosophy

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json
cli/: create.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  html_content.txt  q.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/parsing/: Cargo.toml
src-tauri/parsing/src/: main.rs  parser.rs
src-tauri/src/: main.rs
src-tauri/src/data/: data.rs  mod.rs
src-tauri/utils/: Cargo.toml
src-tauri/utils/src/: lib.rs
src/Components/Post/: MyImg.css  MyImg.jsx  Post.css  Post.jsx
