[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
utils = {path = "../utils"}
scraper = "0.13.0"
once_cell = "1.18.0"
tokio = {version = "1.28.2", features = ["rt", "macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
exitcode = "1.1.2"